<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="ru.dillab.sportdiary.ui.main.MainFragment"
        android:label="@string/main_menu_fragment_title" >
        <action
            android:id="@+id/action_mainFragment_to_testsMenuFragment"
            app:destination="@id/testsMenuFragment" />
        <action
            android:id="@+id/action_mainFragment_to_resultsFragment"
            app:destination="@id/resultsFragment" />
    </fragment>
    <fragment
        android:id="@+id/testsMenuFragment"
        android:name="ru.dillab.sportdiary.ui.tests.menu.TestsMenuFragment"
        android:label="@string/test_menu_fragment_title" >
        <action
            android:id="@+id/action_testsMenuFragment_to_morningTestFragment"
            app:destination="@id/morningTestFragment" />
        <action
            android:id="@+id/action_testsMenuFragment_to_eveningTestFragment"
            app:destination="@id/eveningTestFragment" />
    </fragment>
    <fragment
        android:id="@+id/morningTestFragment"
        android:name="ru.dillab.sportdiary.ui.tests.morning.MorningTestFragment"
        android:label="@string/morning_test_fragment_title"
        tools:layout="@layout/fragment_morning_test" >
        <action
            android:id="@+id/action_morningTestFragment_to_resultsFragment"
            app:destination="@id/resultsFragment"
            app:popUpTo="@id/mainFragment" />
    </fragment>
    <fragment
        android:id="@+id/eveningTestFragment"
        android:name="ru.dillab.sportdiary.ui.tests.evening.EveningTestFragment"
        android:label="@string/evening_test_fragment_title" >
        <action
            android:id="@+id/action_eveningTestFragment_to_resultsFragment"
            app:destination="@id/resultsFragment"
            app:popUpTo="@id/mainFragment" />
    </fragment>
    <fragment
        android:id="@+id/resultsFragment"
        android:name="ru.dillab.sportdiary.ui.results.ResultsFragment"
        android:label="@string/results_fragment_title"
        tools:layout="@layout/fragment_results" />
</navigation>